함수를 값으로 다루기

--- a/05. 코드를 값으로 다루어 표현력 높이기/index.html
+++ b/05. 코드를 값으로 다루어 표현력 높이기/index.html
@@ -30,5 +30,89 @@
             add,
             filter(n => n >= 20000,
             map(p => p.price, products))));
+    console.clear();
+</script>
 
+## 코드를 값으로 다루어 표현력 높이기
+
+<script>
+    const go = (...args) => reduce((a,f) => f(a), args);
+
+    go(
+        0,
+        a => a + 1,
+        a => a + 10,
+        a => a + 100,
+        log
+);
+</script>
+
+## pipe
+
+<script>
+    const pipe = (f, ...fs) => (...as) => go(f(...as), ...fs);
+
+    const f = pipe(
+        (a,b) => a + b,
+        a => a + 10,
+        a => a + 100);
+
+    log(f(2,3));
+    
+</script>
+
+<script>
+    go(
+        products,
+        products => filter(p => p.price < 20000, products),
+        products => map (p => p.price, products),
+        prices => reduce(add, prices),
+        log
+    );
+</script>
+
+## curry
+
+함수를 받아서 함수를 리턴.
+인자를 받아서 인자가 원하는 개수만큼의 인자가 들어왔을 때 나중에 평가시키는 함수
+<script>
+
+    const mult = curry((a,b) => a+b);
+    log(mult(3),(2));
+
+    const mult3 = mult(3);
+    log(mult3(10));
+    log(mult3(5));
+    log(mult3(3));
+
+
+    go(
+        products,
+        filter(p => p.price < 20000),
+        map (p => p.price),
+        reduce (add),
+        log
+    );
+</script>
+
+## 햠수 조합으로 함수 만들기
+<script>
+
+    const total_price = pipe(
+        map(p=> p.price),
+        reduce(add)
+    );
+    go(
+        products,
+        filter(p => p.price < 20000),
+        total_price,
+        log
+    );
+
+    go(
+        products,
+        filter(p => p.price >= 20000),
+        total_price,
+        log
+    );
 </script>
