지연성 및 지연평가 복습

--- a/07. 지연성/2.html
+++ b/07. 지연성/2.html
@@ -1,4 +1,4 @@
-<script src="../lib/fx2.js"></script>
+<script src="./lib/fx2.js"></script>
 
 # 이터러블 중심 프로그래밍에서의 지연 평가
 - 제때 계산법
@@ -9,9 +9,23 @@
 ### L.map
 
 <script>
-    L.map = function* (f,iter) {
+    L.map = function* (f, iter) {
         for (const a of iter) yield f(a);
     };
-    var it = L.map([1,2,3]);
+    let it = L.map(a => a + 10, [1, 2, 3]);
     log(it.next());
+</script>
+
+
+### L.filter
+<script>
+    L.filter = function* (f, iter) {
+        for (const a of iter) {
+            if (f(a)) {
+                yield a
+            }
+        }
+    }
+    let it2 = L.filter(a => a % 2, [1, 2, 3, 4, 5, 6, 7]);
+    log(it2.next());
 </script>
